--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,19 +10,19 @@ source:
   sha256: 0ce53507a7da7b148eaa454526e0e05f7da5e5d1c23440e4886cf146981d8420
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   noarch: python
 
 requirements:
   host:
     - pip
-    - python >=3.5
+    - python >=3.7
   run:
-    - asgiref >=3.2.10,<4
-    - daphne >=3.0,<4
-    - django >=2.2
-    - python >=3.5
+    - asgiref >=3.5,<4
+    - daphne >=4,<5
+    - django >=3.2,<5
+    - python >=3.7
 
 test:
   imports:
@@ -45,3 +45,4 @@ about:
 extra:
   recipe-maintainers:
     - chrisbarber
+    - swainn
